# robothon

./: .gitignore  README.md  run laptop stuff.odt
battery_remove/: CMakeLists.txt  package.xml
battery_remove/src/: battery_remove.cpp
ethernet_cable/: CMakeLists.txt  package.xml
ethernet_cable/src/: ethernet_cable.cpp
gripper_actions/: CMakeLists.txt  package.xml
gripper_actions/scripts/mpl1152aPressure/: mpl1152aPressure.ino
gripper_actions/src/: gripper_actions.cpp
gripper_actions_test/: CMakeLists.txt  package.xml
gripper_actions_test/src/: gripper_actions_test.cpp
gui/: CMakeLists.txt  package.xml
gui/launch/: gui.launch
gui/scripts/: database_funcs.py  gui.py
object_localisation/: CMakeLists.txt  package.xml
object_localisation/launch/: object_localisation.launch
object_localisation/scripts/: balloon_test.py  cameraInfo.p  database_funcs.py  object_classifier.py  object_names.txt  object_ros_publisher.py  postgresql_node.py  rs_cam.py  run_object_localisation.py  test.py  test_camera_params.py  transform_objects.py
object_localisation/scripts/Mask_RCNN/mrcnn/: model.py
placing_batteries/: CMakeLists.txt  package.xml
placing_batteries/src/: placing_batteries.cpp
repositioning_gripper_test/: CMakeLists.txt  package.xml
repositioning_gripper_test/src/: repositioning_gripper_test.cpp
robot_actions/: CMakeLists.txt  package.xml
robot_actions/docs/: .~lock.Instructions to run the Robotiq demo.doc#
robot_actions/msg/: icmDataMsg.msg  robotControlParameters.msg
robot_actions/src/: robot_actions.cpp
robot_tasks/: CMakeLists.txt  package.xml
robot_tasks/msg/: robotControlParameters.msg
robot_tasks/src/: robot_tasks.cpp
robot_tasks_automatic/: CMakeLists.txt  package.xml
robot_tasks_automatic/msg/: gripperControlParameters.msg  object_state.msg
robot_tasks_automatic/src/: robot_tasks_automatic.cpp
stopRobotTest/: CMakeLists.txt  package.xml
stopRobotTest/src/: stopRobotTest.cpp
test_ik_planning/: CMakeLists.txt  package.xml  run_instructions.txt
test_ik_planning/launch/: test_ik_planning.launch
test_ik_planning/src/: test_ik_planning.cpp
(+4 files in other folders)
